==================================
Rilascio 1.69.25    del 10/05/2015
==================================

Filbuster: ottimizzate le query e migliorata l'interfaccia ad albero.

ryFamily: perfezionamenti e nuove proprietà.

==================================
Rilascio 1.69.24    del 09/05/2015
==================================

Filibuster: ottimizzazione (parziale) query.

ryFamily: fuoco e navigazione (non terminato).

==================================
Rilascio 1.69.23    del 05/05/2015
==================================

Amministrazione pagine Filibuster: aggiunta la modalità di navigazione ad albero.

==================================
Rilascio 1.69.22    del 04/05/2015
==================================

Facilitata la gestione di ryFamily.
Triggerati gli eventi click del mouse e introdotti metodi ed eventi.

==================================
Rilascio 1.69.21    del 02/05/2015
==================================

Rese giuste le dimensioni delle celle  in ryQue e ryUnbound.
Aggiunto un margine alle icone per compensare la riduzione del "top".

RYJAX: aggiunte funzioni utili.

==================================
Rilascio 1.69.20    del 01/05/2015
==================================

ryQue e ryUnbound: cambiato il nome dell'evento "selchange" in "chengesel".
Il nome "selchange" è comunque utilizzabile come alias per compatibilità. 

Sostituite tutte le occorrenze di "_sessionid" con "_sessioninfo.sessionid".

Centralizzata la posizione della variabile "$cacheversion".

Memorizzati i nodi aperti di rySource.

==================================
Rilascio 1.69.19    del 29/04/2015
==================================

ryCode: gestito lo scroll orizzontale e il CTRL-RIGHT/CTRL-LEFT.

ryBox: gestita la selezione mediante mousedown e mousemove.

Sostituiti molti alias "_sessionid" con "_sessioninfo.sessionid".

==================================
Rilascio 1.69.18    del 28/04/2015
==================================
